(library
 (public_name dream-mirage)
 (name dream__mirage)
 (libraries
  bigstringaf
  digestif
  dream.cipher
  dream.server
  dream.certificate
  dream-pure
  dream-httpaf.dream-h2-eio
  dream-httpaf.dream-httpaf_-eio
  dream-httpaf.dream-gluten-eio
  tcpip
  tls-eio
 )
 (instrumentation (backend bisect_ppx)))
